<resources>
    <string name="app_name">ABP 112 Police Service</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>
    <string name="driver_dashboard">driver dashboard</string>
    <string name="password_hint">Password</string>
    <string name="email_id_hint">Email Id</string>
    <string name="submit">LogIn</string>
    <string name="user_name">User Name</string>
    <string name="state_manager">State Manager</string>
    <string name="welcome_msg">Welcome</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="status">STATUS</string>
    <string name="manager">MANAGER</string>
    <string name="phone_number">Phone Number</string>
    <string name="working_hrs">Total working hrs</string>
    <string name="district_list">District List</string>
    <string name="police_list">Police List</string>
    <string name="police_station_name">Police Station Name</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="app_title">ABP 112 Police Service</string>
    <string name="code_disclaimer">** कृपया अपनी उपस्थिति दर्ज करने के लिए सही पास कोड दर्ज करें !</string>
    <string name="date_created">Date Created</string>
    <string name="no_data_available">No data available</string>
    <string name="veh_num_dummy">JH 01 TS\n0001</string>
    <string name="pass_code_not_gen">Pass code not generated yet !</string>
    <string-array name="spinner_login">
        <item>Select Type</item>
        <item>Driver</item>
        <item>District Manager</item>
        <item>State Manager</item>
    </string-array>
</resources>
