<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"

    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appBar"
        android:layout_height="320dp"
        android:background="@drawable/bg_login"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:scaleType="centerCrop"
                android:src="@drawable/att"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


<android.support.v7.widget.CardView
    android:padding="20dp"
    android:id="@+id/card_login"
    android:layout_marginTop="250dp"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="25dp"
    app:layout_anchor="@id/appBar"
    app:layout_anchorGravity="bottom|center"
    android:nestedScrollingEnabled="true"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin=  "16dp">
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_login"
                android:entries="@array/spinner_login"
                style="@style/style_spn">
            </android.support.v7.widget.AppCompatSpinner>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email_login"
                    android:inputType="textWebEmailAddress"
                    android:hint="@string/email_id_hint"
                    android:ems="150"
                    android:drawableStart="@drawable/ic_email"
                    style="@style/style_et" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_weight="4"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/ic_pass_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_password_login"
                    android:inputType="textWebPassword"
                    android:hint="@string/password_hint"
                    android:drawableStart="@drawable/ic_password"
                    style="@style/style_et" />
            </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:layout_marginTop="25dp"
                app:layout_anchor="@id/card_login"
                app:layout_anchorGravity="bottom|center"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_login"
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/colorPrimary"
               />
            </android.support.v7.widget.CardView>
        </LinearLayout>
</android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>
