<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--Left side Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="50dp"
                    android:id="@+id/ivAttendance"
                    style="@style/style_cv">

                    <ImageView
                       style="@style/style_iv"
                        android:background="@drawable/attendance_new" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivAttendance"
                    android:gravity="center"
                    android:text="@string/attendance"
                    android:textColor="@color/black_dark"
                    android:textSize="15dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.v7.widget.CardView
                    app:cardCornerRadius="50dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    android:id="@+id/rlLogout"
                    style="@style/style_cv">

                    <ImageView
                        style="@style/style_iv"
                        android:background="@drawable/attendance_new" />
                </android.support.v7.widget.CardView>
                <ImageView
                    android:id="@+id/tourStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/rlLogout"
                    android:layout_alignRight="@+id/rlLogout"
                    android:layout_alignEnd="@+id/rlLogout"
                    android:layout_marginRight="5dp"
                    android:contentDescription="evr"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlLogout"
                    android:gravity="center"
                    android:text="EVR"
                    android:textColor="@color/black_dark"
                    android:textSize="15dp" />

            </RelativeLayout>

        </LinearLayout>
        <!--Right side Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="50dp"
                    android:id="@+id/ivLeave"
                    style="@style/style_cv">

                    <ImageView
                        style="@style/style_iv"
                        android:background="@drawable/attendance_new" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivLeave"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textColor="@color/black_dark"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="50dp"
                    android:id="@+id/ivExpense"
                    style="@style/style_cv">

                    <ImageView
                       style="@style/style_iv"
                        android:background="@drawable/attendance_new" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivExpense"
                    android:gravity="center"
                    android:text="@string/manager"
                    android:textColor="@color/black_dark"
                    android:textSize="15dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
